--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:title" content="My Reefing journey">
+    <meta property="og:site_name" content="Reefen">
+    <meta property="og:url" content="https://reefen.nz">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://i.imgur.com/aBaQ1HD.jpg">
+
     <title>Reefen</title>
   </head>
   <body>
